Two options for preventing the native shift-click selection of text

--- a/src/components/Racetrack/Facet.scss
+++ b/src/components/Racetrack/Facet.scss
@@ -88,7 +88,7 @@
     }
 
     .Facet-value-table-row {
-      user-select: none;
+      @include noSelect;
       color: $zorroa-greyish-brown;
       &:hover { background-color: $zorroa-hover; }
       &.selected { background-color: $zorroa-selected; }
